# dot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/dot/: box.h  copyable.h  exception.h  fail.h  object.h  public.h  rope.h  scalar.h  stdfwd.h  string.h  test.h  trace.h  type.h
projects/msvs2015/dot/: dot.vcxproj  dot.vcxproj.filters
projects/msvs2015/test_dot/: test_dot.vcxproj  test_dot.vcxproj.filters
projects/msvs2017/: dot.sln
projects/msvs2017/dot/: dot.vcxproj  dot.vcxproj.filters
projects/msvs2017/test_dot/: test_dot.vcxproj  test_dot.vcxproj.filters
projects/msvs2019/dot/: dot.vcxproj
projects/msvs2019/test_dot/: test_dot.vcxproj  test_dot.vcxproj.filters
projects/msvs2022/: dot.sln
projects/msvs2022/dot/: dot.vcxproj  dot.vcxproj.filters
projects/msvs2022/test_dot/: test_dot.vcxproj
sources/: box.cpp  copyable.cpp  exception.cpp  fail.cpp  object.cpp  rope.cpp  scalar.cpp  string.cpp  test.cpp  trace.cpp  type.cpp
tests/: test_box.cpp  test_copyable.cpp  test_dot.cpp  test_main.cpp  test_object.cpp  test_rope.cpp  test_scalar.cpp
